--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Prepare distribution output
-      run: mkdir $GITHUB_WORKSPACE/dist && cp $GITHUB_WORKSPACE/src/* $GITHUB_WORKSPACE/dist
+      run: mkdir $GITHUB_WORKSPACE/dist && cp -r $GITHUB_WORKSPACE/src/* $GITHUB_WORKSPACE/dist
 
     - name: Log Into Azure
       uses: Azure/login@v1
