--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,4 +33,4 @@ jobs:
       with:
         azcliversion: latest
         inlinescript: |
-          az storage blob upload-batch -s $GITHUB_WORKSPACE/src/WebApp/dist -d \$web --account-name ${{ secrets.STORAGE_ACCOUNT_NAME }}
+          az storage blob upload-batch -s $GITHUB_WORKSPACE/dist -d \$web --account-name ${{ secrets.STORAGE_ACCOUNT_NAME }}
